--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>consulta</ion-title>
+    <ion-title>Descobrir CEP</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -37,7 +37,6 @@
     <p>Rua: {{item.logradouro}}</p>
     <p>IBGE: {{item.ibge}}</p>
     <h3>{{fail}}</h3>
-    <button ion-button color="primary" block>Este é meu endereço</button>
   </ion-item>
 </ion-list>
 </ion-content>
