--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,3 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Consulta" tabIcon="ios-compass-outline"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Consulta" tabIcon="search"></ion-tab>
 </ion-tabs>
