criando o busca por Cep

--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Descobrir CEP</ion-title>
+    <ion-title>Buscar por Endereço</ion-title>
   </ion-navbar>
 </ion-header>
 
