--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Consulta" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Endereço" tabIcon="md-globe"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="CEP" tabIcon="md-locate"></ion-tab>
 </ion-tabs>
